# oh-my-kimi

./: .gitignore  AGENTS.md  OMK-Business-Logic-Optimization-Report.md  OMK-Optimization-Audit-Report.md  README.md  README_ZH.md  cleanup-legacy.sh  install.sh  pyproject.toml  uninstall.sh
.codex/: config.toml  hooks.json
.kimi/agents/: analyst.yaml  code-reviewer.yaml  code-simplifier.yaml  coder.yaml  document-specialist.yaml  git-master.yaml  security-reviewer.yaml  system.md  tracer.yaml  verifier.yaml
.omx/: metrics.json
.omx/context/: kimi-cli-compat-20260419T105821Z.md  role-lifecycle-prompts-20260424T070859Z.md
.omx/logs/: notify-hook-2026-04-19.jsonl  notify-hook-2026-04-24.jsonl  omx-2026-04-19.jsonl  omx-2026-04-24.jsonl  tmux-hook-2026-04-19.jsonl  tmux-hook-2026-04-24.jsonl  turns-2026-04-19.jsonl  turns-2026-04-24.jsonl
.omx/plans/: open-questions.md  prd-kimi-cli-1.36-compatibility.md  ralplan-kimi-cli-1.36-compatibility-short.md  role-lifecycle-prompts-initial-plan.md  test-spec-kimi-cli-1.36-compatibility.md
.omx/state/: hud-state.json  notify-hook-state.json  session.json  skill-active-state.json  tmux-hook-state.json
agents/default/: agent.yaml  analyst.yaml  architect.yaml  code-reviewer.yaml  code-simplifier.yaml  coder.yaml  critic.yaml  (+15 more)
docs/: self-improve-pattern.md
omk/: __init__.py  cli.py  notifier.py  state.py  updater.py
scripts/: ast-search.sh  check-agent-contract.py  lsp-diagnostics.sh  notify.sh  rate-limit-wait.sh  smoke-test.sh  update-check.sh
tests/: test_check_agent_contract.py  test_state_comprehensive.py
(+74 files in other folders)
